objects/SGR_Relationship_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Census_Relationship__c</fullName>
        <label>Census Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URE_Code__c</fullName>
        <label>URE Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>SGR Relationship Mapping</label>
</CustomObject>